--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
+  <title>Oliver Bravery</title>
 </head>
-<body class="bg-slate-800">
-    <div class="container">
-        <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 rounded">
-            hello
-        </button>
-    </div>
+<body class="bg-slate-800 mx-auto px-2">
+
+    <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
+        <div class="md:flex">
+          <div class="p-8">
+            <h1 class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
+            <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
+            <p class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+            <button class="shadow-md max-w-md h-8 hover:bg-indigo-300 active:bg-indigo-400 focus:outline-none bg-indigo-200 text-white rounded-xl px-3">View more</button>
+          </div>
+        </div>
+      </div>
+
 </body>
 </html>
