--- a/src/index.html
+++ b/src/index.html
@@ -11,56 +11,12 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3">
 
-
                 <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
                     <div class="md:flex">
                         <div class="p-8">
-                            <h1 class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
-                            <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-indigo-300 
-                            active:bg-indigo-400 focus:outline-none bg-indigo-500 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
-                            <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-indigo-300 
-                            active:bg-indigo-400 focus:outline-none bg-indigo-500 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
-                            <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-indigo-300 
-                            active:bg-indigo-400 focus:outline-none bg-indigo-500 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
-                            <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                            <h1 id="projName" class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
+                            <div id="projTag" class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
+                                <p id="projDesc" class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
                             <div class="flex items-center">
                                 <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-indigo-300 
                             active:bg-indigo-400 focus:outline-none bg-indigo-500 text-white rounded-xl px-3 w-60">View more</button>
