--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,24 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Oliver Bravery</title>
 </head>
-<body class="bg-slate-800 mx-auto px-2">
+<body class="bg-gray-800 mx-auto px-4 py-4">
+    <nav class="relative w-full flex flex-wrap items-center justify-between py-3 bg-slate-800 rounded-md text-gray-200 shadow-lg navbar navbar-expand-lg navbar-light">
+        <div class="text-center">
+            <a class="text-grey-500 text-4xl pr-2 font-semibold" href="#">[ Oliver Bravery ]</a>
+        </div>
+    </nav>
 
+            <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3">
 
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3">
-
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2x1">
+                <div class="max-w-md mx-auto bg-slate-800 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-slate-800 font-semibold">Hello, World!</h1>
+                            <h1 id="projName" class="h-12 text-3xl text-slate-200 font-semibold">Hello, World!</h1>
                             <div id="projTag" class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p id="projDesc" class="mt-2 text-slate-500 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                                <p id="projDesc" class="mt-2 text-slate-200 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
                             <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-indigo-300 
-                            active:bg-indigo-400 focus:outline-none bg-indigo-500 text-white rounded-xl px-3 w-60">View more</button>
+                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-gray-600
+                            active:bg-slate-800 focus:outline-none bg-gray-700 text-white rounded-xl px-3 w-60">View more</button>
                             </div>
                         </div>
                     </div>
