--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,64 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Oliver Bravery</title>
 </head>
-<body class="bg-gray-800 mx-auto px-4 py-4">
-    <nav class="relative w-full flex flex-wrap items-center justify-between py-3 bg-slate-800 rounded-md text-gray-200 shadow-lg navbar navbar-expand-lg navbar-light">
-        <div class="text-center">
-            <a class="text-grey-500 text-4xl pr-2 font-semibold" href="#">[ Oliver Bravery ]</a>
-        </div>
+<body class="bg-gray-900 mx-auto px-4 py-4 font-light">
+    <nav class="text-center relative w-full flex flex-wrap justify-between py-3 bg-gray-900 rounded-md shadow-lg navbar navbar-expand-lg navbar-light">
+        <a class="font-no text-slate-50 text-4xl pr-2" href="#">[ Oliver Bravery ]</a>
     </nav>
 
-            <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3">
+            <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3">
 
-                <div class="max-w-md mx-auto bg-slate-800 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-slate-200 font-semibold">Hello, World!</h1>
-                            <div id="projTag" class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Case study</div>
-                                <p id="projDesc" class="mt-2 text-slate-200 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                            <div id="projTag" class="uppercase tracking-wide text-sm text-amber-600 font-semibold">Mod</div>
+                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
                             <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-gray-600
-                            active:bg-slate-800 focus:outline-none bg-gray-700 text-white rounded-xl px-3 w-60">View more</button>
+                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                    <div class="md:flex">
+                        <div class="p-8">
+                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                            <div id="projTag" class="uppercase tracking-wide text-sm text-cyan-600 font-semibold">Window</div>
+                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                            <div class="flex items-center">
+                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                    <div class="md:flex">
+                        <div class="p-8">
+                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                            <div id="projTag" class="uppercase tracking-wide text-sm text-rose-600 font-semibold">Console</div>
+                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                            <div class="flex items-center">
+                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                    <div class="md:flex">
+                        <div class="p-8">
+                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                            <div id="projTag" class="uppercase tracking-wide text-sm text-emerald-600 font-semibold">Misc</div>
+                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                            <div class="flex items-center">
+                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
                             </div>
                         </div>
                     </div>
