--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
   <title>Oliver Bravery</title>
 </head>
 <body class="bg-gray-900 mx-auto px-4 py-4 font-light">
-    <nav class="text-center relative w-full flex flex-wrap justify-between py-3 bg-gray-900 rounded-md shadow-lg navbar navbar-expand-lg navbar-light">
+    <nav class="text-center relative w-full flex flex-wrap justify-between py-3 bg-gray-900 rounded-md shadow-xl navbar navbar-expand-lg navbar-light">
         <a class="font-no text-slate-50 text-4xl pr-2" href="#">[ Oliver Bravery ]</a>
     </nav>
 
             <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3">
 
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
                             <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
@@ -27,7 +27,7 @@
                     </div>
                 </div>
 
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
                             <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
@@ -41,7 +41,7 @@
                     </div>
                 </div>
 
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
                             <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-md overflow-hidden md:max-w-2x1 m-4">
+                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
                     <div class="md:flex">
                         <div class="p-8">
                             <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
