Centred text + added GitHub button

--- a/src/index.html
+++ b/src/index.html
@@ -7,68 +7,72 @@
   <title>Oliver Bravery</title>
 </head>
 <body class="bg-gray-900 mx-auto px-4 py-4 font-light">
-    <nav class="text-center relative w-full flex flex-wrap justify-between py-3 bg-gray-900 rounded-md shadow-xl navbar navbar-expand-lg navbar-light">
-        <a class="font-no text-slate-50 text-4xl pr-2" href="#">[ Oliver Bravery ]</a>
+
+    <nav class="relative w-full flex justify-center py-3 bg-gray-900 rounded-md shadow-xl navbar navbar-expand-lg navbar-light">
+        <a class="font-no text-slate-50 text-4xl pr-2 m-5" href="#">[ Oliver Bravery ]</a>
+        <a href="https://github.com/oliverbravery" class="mt-4">
+            <img src="media/GitHub-Mark.svg" width="50" alt="github logo">
+        </a>
     </nav>
 
-            <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3">
+    <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3">
 
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
-                            <div id="projTag" class="uppercase tracking-wide text-sm text-amber-600 font-semibold">Mod</div>
-                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
-                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
+        <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
+            <div class="md:flex">
+                <div class="p-8">
+                    <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                    <div id="projTag" class="uppercase tracking-wide text-sm text-amber-600 font-semibold">Mod</div>
+                        <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                    <div class="flex items-center">
+                        <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                    active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
                     </div>
                 </div>
-
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
-                            <div id="projTag" class="uppercase tracking-wide text-sm text-cyan-600 font-semibold">Window</div>
-                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
-                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
-                            <div id="projTag" class="uppercase tracking-wide text-sm text-rose-600 font-semibold">Console</div>
-                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
-                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
-                    <div class="md:flex">
-                        <div class="p-8">
-                            <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
-                            <div id="projTag" class="uppercase tracking-wide text-sm text-emerald-600 font-semibold">Misc</div>
-                                <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
-                            <div class="flex items-center">
-                                <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
-                            active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
             </div>
+        </div>
+
+        <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
+            <div class="md:flex">
+                <div class="p-8">
+                    <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                    <div id="projTag" class="uppercase tracking-wide text-sm text-cyan-600 font-semibold">Window</div>
+                        <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                    <div class="flex items-center">
+                        <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                    active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
+            <div class="md:flex">
+                <div class="p-8">
+                    <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                    <div id="projTag" class="uppercase tracking-wide text-sm text-rose-600 font-semibold">Console</div>
+                        <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                    <div class="flex items-center">
+                        <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                    active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="max-w-md mx-auto bg-gray-900 rounded-xl shadow-xl overflow-hidden md:max-w-2x1 m-4">
+            <div class="md:flex">
+                <div class="p-8">
+                    <h1 id="projName" class="h-12 text-3xl text-gray-300 font-semibold">Hello, World!</h1>
+                    <div id="projTag" class="uppercase tracking-wide text-sm text-emerald-600 font-semibold">Misc</div>
+                        <p id="projDesc" class="mt-2 text-gray-400 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate quia itaque, iste perferendis quasi molestias exercitationem omnis. Accusantium voluptatibus repellendus, itaque delectus sequi quae et, voluptates blanditiis doloremque consectetur qui?</p>
+                    <div class="flex items-center">
+                        <button class="mt-5 text-center flex-auto shadow-md max-w-md mx-auto h-8 hover:bg-slate-700
+                    active:bg-slate-900 focus:outline-none bg-slate-800 text-white rounded-xl px-3 w-60">View more</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
