--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,21 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Oliver Bravery</title>
 </head>
-<body class="bg-gray-900 mx-auto px-4 py-4 font-light">
+<body class="bg-gray-900 mx-auto px-4  font-light">
 
-    <nav class="relative w-full flex justify-center py-3 bg-gray-900 rounded-md shadow-xl navbar navbar-expand-lg navbar-light">
-        <a class="font-no text-slate-50 text-4xl pr-2 p-5" href="#">[ Oliver Bravery ]</a>
-        <a href="https://github.com/oliverbravery" class="pt-4 pl-5">
-            <img src="media/GitHub-Mark.svg" width="50" alt="github logo">
-        </a>
+    <nav class="p-4 px-5 flex justify-between mx-auto bg-gray-900 rounded-md shadow-xl">
+        <div class="flex items-center"></div>
+        <div class="flex justify-center">
+            <a class="pt-1 text-slate-50 text-3xl pl-10" href="#">[ Oliver Bravery ]</a>
+        </div>
+        <div class="flex justify-center">
+            <a href="https://github.com/oliverbravery">
+                <img src="media/GitHub-Mark.svg" width="50" alt="github logo">
+            </a>
+        </div>
+        <!-- <div id="aboutMe">
+            <p class="text-lg text-gray-300">computer science student</p>
+        </div> -->
     </nav>
     
 
@@ -34,7 +42,6 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
             </svg></button>
     </form> -->
-
     
 
     <div id="projGrid" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-3">
