finished nav bar

--- a/src/index.html
+++ b/src/index.html
@@ -6,21 +6,23 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Oliver Bravery</title>
 </head>
-<body class="bg-gray-900 mx-auto px-4  font-light">
+<body class="p-4 px-5 bg-gray-900 mx-auto px-4  font-light">
 
-    <nav class="p-4 px-5 flex justify-between mx-auto bg-gray-900 rounded-md shadow-xl">
-        <div class="flex items-center"></div>
-        <div class="flex justify-center">
-            <a class="pt-1 text-slate-50 text-3xl pl-10" href="#">[ Oliver Bravery ]</a>
+    <nav class="bg-gray-900 rounded-md shadow-xl">
+        <div class="flex justify-between mx-auto">
+            <div class="flex items-center"></div>
+            <div class="flex justify-center">
+                <a class="pt-1 text-slate-50 text-3xl pl-12 ml-1" href="#">[ Oliver Bravery ]</a>
+            </div>
+            <div class="flex justify-center">
+                <a href="https://github.com/oliverbravery">
+                    <img src="media/GitHub-Mark.svg" width="50" alt="github logo">
+                </a>
+            </div>
         </div>
-        <div class="flex justify-center">
-            <a href="https://github.com/oliverbravery">
-                <img src="media/GitHub-Mark.svg" width="50" alt="github logo">
-            </a>
-        </div>
-        <!-- <div id="aboutMe">
+        <div id="aboutMe" class="text-center pb-6">
             <p class="text-lg text-gray-300">computer science student</p>
-        </div> -->
+        </div>
     </nav>
     
 
