Fixed lower nav text

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,13 @@
                 </a>
             </div>
         </div>
-        <div id="aboutMe" class="text-center pb-6">
-            <p class="text-lg text-gray-300">computer science student</p>
-        </div>
     </nav>
+    <div>
+
+
+    <div id="aboutMe" class="flex justify-between mx-auto pt-1 bg-gray-900 rounded-b-md shadow-xl pb-5 max-w-xs">
+        <p class="text-lg text-gray-300 flex justify-between mx-auto">computer science student</p>
+    </div>
     
 
     <!-- <form class="items-center break-all relative w-full flex justify-center p-5">   
