--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link href="/dist/output.css" rel="stylesheet">
   <title>Oliver Bravery</title>
 </head>
-<body class="p-4 px-5 bg-gray-900 mx-auto px-4  font-light">
+<body class="p-4 px-5 bg-gray-900 mx-auto font-light">
 
     <nav class="bg-gray-900 rounded-md shadow-xl">
         <div class="flex justify-between mx-auto">
@@ -21,8 +21,6 @@
             </div>
         </div>
     </nav>
-    <div>
-
 
     <div id="aboutMe" class="flex justify-between mx-auto pt-1 bg-gray-900 rounded-b-md shadow-xl pb-5 max-w-xs">
         <p class="text-lg text-gray-300 flex justify-between mx-auto">computer science student</p>
@@ -33,7 +31,11 @@
         <label for="simple-search" class="sr-only">Search</label>
         <div class="relative w-60">
             <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
-                <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
+                <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                     clip-rule="evenodd">
+                    </path>
+                </svg>
             </div>
             <input type="text" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900
                 text-sm rounded-lg focus:ring-slate-900 focus:border-slate-900 block w-full pl-10 p-2.5 
@@ -45,7 +47,8 @@
             focus:ring-blue-300 dark:bg-blue-900 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-            </svg></button>
+            </svg>
+        </button>
     </form>
     
 
